@@ -16,6 +16,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2003-12-08 AP        Refactor virtual pgObject::GetDatabase()
     <li>2003-12-08 AP        Rewrite of schema qualifier suppression: configurable or search_path
     <li>2003-12-08 DP        Prompt to save changes before opening SQL files.
     <li>2003-12-08 AP        Query tool: display of inserted OIDs
